--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@ var rotateButton = document.getElementById("unity-rotate-button");
           //myDiv.style.height = Heightoffset + 'px';
         }
       }
-      //resize();
+      resize();
       //###########################################################################################################################
     </script>
     <script>
